Adjusted colors. Will return to this for aesthetics. Fixed page wrap such that webpage has whitespace on the sides. Need to fix footer in mobile mode.

--- a/mini-projects/mp-1/index/index.css
+++ b/mini-projects/mp-1/index/index.css
@@ -5,19 +5,23 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: blanchedalmond;
 }
 
 #page-wrap {
     width: 70%;
     margin: 0 auto;
+    background-color: blanchedalmond;
 }
 
 header {
     display: flex;
     flex-direction: column;
-    /*background-color: white;*/
+    background-color: darkolivegreen;
     padding: 1vw 1vh;
+}
+
+h1, header p {
+    color: beige;
 }
 
 nav {
